<resources>
    <string name="additional_system_update" />
    <string name="additional_system_update_menu" />
    <string name="input_method_selector_show_automatically_value">0</string>
    <string name="input_method_selector_always_show_value">1</string>
    <string name="input_method_selector_always_hide_value">2</string>
    <string name="input_method_selector_visibility_default_value">0</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="create">Create</string>
    <string name="device_info_default">Unknown</string>
    <string name="header_category_wireless_networks">WIRELESS &amp; NETWORKS</string>
    <string name="header_category_device">DEVICE</string>
    <string name="header_category_personal">PERSONAL</string>
    <string name="header_category_system">SYSTEM</string>
    <string name="turn_on_radio">Turn on radio</string>
    <string name="turn_off_radio">Turn off radio</string>
    <string name="sms_over_ims_on">Turn on SMS over IMS</string>
    <string name="sms_over_ims_off">Turn off SMS over IMS</string>
    <string name="ims_reg_required_on">Turn on IMS registration required</string>
    <string name="ims_reg_required_off">Turn off IMS registration required</string>
    <string name="lte_ram_dump_on">Turn on lte ram dump</string>
    <string name="lte_ram_dump_off">Turn off lte ram dump</string>
    <string name="radioInfo_menu_viewADN">View SIM address book</string>
    <string name="radioInfo_menu_viewFDN">View Fixed Dialing Numbers</string>
    <string name="radioInfo_menu_viewSDN">View Service Dialing Numbers</string>
    <string name="radioInfo_menu_getPDP">Get PDP list</string>
    <string name="radioInfo_service_in">In service</string>
    <string name="radioInfo_service_out">Out of service</string>
    <string name="radioInfo_service_emergency">Emergency calls only</string>
    <string name="radioInfo_service_off">Radio off</string>
    <string name="radioInfo_roaming_in">Roaming</string>
    <string name="radioInfo_roaming_not">Not roaming</string>
    <string name="radioInfo_phone_idle">Idle</string>
    <string name="radioInfo_phone_ringing">Ringing</string>
    <string name="radioInfo_phone_offhook">Call in progress</string>
    <string name="radioInfo_data_disconnected">Disconnected</string>
    <string name="radioInfo_data_connecting">Connecting</string>
    <string name="radioInfo_data_connected">Connected</string>
    <string name="radioInfo_data_suspended">Suspended</string>
    <string name="radioInfo_unknown">unknown</string>
    <string name="radioInfo_display_packets">pkts</string>
    <string name="radioInfo_display_bytes">bytes</string>
    <string name="radioInfo_display_dbm">dBm</string>
    <string name="radioInfo_display_asu">asu</string>
    <string name="radioInfo_lac">LAC</string>
    <string name="radioInfo_cid">CID</string>
    <string name="sdcard_unmount">Unmount SD card</string>
    <string name="sdcard_format">Erase SD card</string>
    <string name="small_font">Small</string>
    <string name="medium_font">Medium</string>
    <string name="large_font">Large</string>
    <string name="font_size_preview_text">Servez à ce monsieur une bière et des kiwis.</string>
    <string name="font_size_save">OK</string>
    <string name="sdcard_setting">SD card</string>
    <string name="battery_info_status_label">Battery status:</string>
    <string name="battery_info_power_label">Power plug:</string>
    <string name="battery_info_scale_label">Battery scale:</string>
    <string name="battery_info_level_label">Battery level:</string>
    <string name="battery_info_health_label">Battery health:</string>
    <string name="battery_info_technology_label">Battery technology:</string>
    <string name="battery_info_voltage_label">Battery voltage:</string>
    <string name="owner_info_settings_title">Owner info</string>
    <string name="owner_info_settings_summary" />
    <string name="location_settings_title">Location access</string>
    <string name="sound_settings">Sound</string>
    <string name="ringtone_title">Phone ringtone</string>
    <string name="all_volume_title">Volumes</string>
    <string name="musicfx_title">Music effects</string>
    <string name="notification_sound_title">Default notification</string>
    <string name="notification_sound_dialog_title">Choose notification ringtone</string>
    <string name="dtmf_tone_enable_title">Dial pad touch tones</string>
    <string name="sound_effects_enable_title">Touch sounds</string>
    <string name="lock_sounds_enable_title">Screen lock sound</string>
    <string name="haptic_feedback_enable_title">Vibrate on touch</string>
    <string name="vibrate_when_ringing_title">Vibrate when ringing</string>
    <string name="display_settings">Display</string>
    <string name="accelerometer_title">Auto-rotate screen</string>
    <string name="brightness">Brightness</string>
    <string name="screen_timeout">Sleep</string>
    <string name="screen_timeout_summary">After %1$s of inactivity</string>
    <string name="wallpaper_settings_title">Wallpaper</string>
    <string name="screensaver_settings_title">Screen Candy</string>
    <string name="title_font_size">Font size</string>
    <string name="summary_font_size">%1$s</string>
    <string name="dialog_title_font_size">Font size</string>
    <string name="location_network_based">Wi-Fi &amp; mobile network location</string>
    <string name="location_neighborhood_level">"Let apps use Google's location service to estimate your location faster. Anonymous location data will be collected and sent to Google."</string>
    <string name="location_gps">GPS satellites</string>
    <string name="location_street_level">Let apps use GPS on your phone to pinpoint your location</string>
    <string name="location_gps_source_title">GPS source</string>
    <string name="location_gps_source_summary">Choose to use either an external Bluetooth GPS antenna or the internal GPS antenna as location provider</string>
    <string name="location_access_title">Access to my location</string>
    <string name="location_access_summary">Let apps that have asked your permission use your location information</string>
    <string name="location_sources_heading">Location sources</string>
    <string name="emergency_tone_title">Emergency tone</string>
    <string name="sound_category_call_ringtone_vibrate_title">Call ringtone &amp; vibrate</string>
    <string name="sound_category_system_title">System</string>
    <string name="quiet_hours_title">Quiet hours</string>
    <string name="safe_headset_restore_title">Safe headset volume</string>
    <string name="safe_headset_restore_summary">Prevent loud volume levels when headset is first plugged in</string>
    <string name="battery_light_title">Battery light</string>
    <string name="backlight_title">Automatic backlight</string>
    <string name="backlight_summary">Tweak levels and filtering</string>
    <string name="notification_pulse_title">Notification light</string>
    <string name="themes_settings_title">Themes</string>
    <string name="system_interface_title">System interface</string>
    <string name="notification_drawer_title">Notification drawer</string>
    <string name="combined_bar_auto_hide_title">Auto hide</string>
    <string name="combined_bar_auto_hide_summary">Allow combined bar to hide when showing a fullscreen app</string>
    <string name="navigation_bar_title">Navigation bar</string>
    <string name="hardware_keys_title">Hardware keys</string>
    <string name="combined_status_bar_title">@string/status_bar_title</string>
    <string name="status_bar_clock_title">Clock</string>
    <string name="status_bar_general_title">General</string>
    <string name="status_bar_show_clock_title">Show clock</string>
    <string name="status_bar_am_pm_title">AM/PM style</string>
    <string name="status_bar_battery_title">Battery status style</string>
    <string name="status_bar_toggle_brightness">Brightness control</string>
    <string name="status_bar_toggle_brightness_summary">Adjust brightness by sliding across status bar</string>
    <string name="status_bar_signal_text_title">Signal status style</string>
    <string name="lockscreen_target_title">Slider shortcuts</string>
    <string name="lockscreen_target_summary">View or change custom lock screen shortcuts</string>
    <string name="lockscreen_weather_title">Weather</string>
    <string name="lockscreen_weather_summary">Display weather information on the lock screen</string>
    <string name="weather_enable">Display weather</string>
    <string name="weather_source">Yahoo! Weather</string>
    <string name="weather_use_custom_location">Use custom location</string>
    <string name="weather_custom_location_dialog_title">Enter location</string>
    <string name="weather_custom_location_hint">City, State/Country</string>
    <string name="weather_custom_location_title">Location</string>
    <string name="weather_show_location_title">Show location</string>
    <string name="weather_show_timestamp_title">Show timestamp</string>
    <string name="weather_refresh_interval">Update interval</string>
    <string name="weather_use_metric">Use metric</string>
    <string name="weather_invert_lowhigh">Invert low/high temperatures</string>
    <string name="lockscreen_calendar_title">Calendar</string>
    <string name="lockscreen_calendar_summary">Display the next calendar event on the lock screen</string>
    <string name="calendar_title">Display next event</string>
    <string name="calendars_title">Event calendars</string>
    <string name="calendars_summary">Find events from these calendars</string>
    <string name="calendar_reminders_only_title">Reminders only</string>
    <string name="calendar_reminders_only_summary">Show only events with reminders</string>
    <string name="calendar_lookahead_title">Event lookahead</string>
    <string name="calendar_show_location_title">Event location</string>
    <string name="calendar_show_description_title">Event description</string>
    <string name="lockscreen_custom_background_title">Background</string>
    <string name="lockscreen_battery_status_title">Battery status</string>
    <string name="lockscreen_clock_align_title">Clock alignment</string>
    <string name="lockscreen_buttons_title">Button actions</string>
    <string name="lockscreen_buttons_summary">View or change lock screen button actions</string>
    <string name="screen_security_category">Screen security</string>
    <string name="screen_security_summary">View or change lock screen security, delay and timeout settings</string>
    <string name="display_rotation_title">Rotation</string>
    <string name="status_bar_notif_count_title">Show notification count</string>
    <string name="status_bar_notif_count_summary">Display number of pending notifications</string>
    <string name="increasing_ring_title">Ascending ringtone</string>
    <string name="volume_overlay_title">Volume panel style</string>
    <string name="silent_mode_title">Silent mode</string>
    <string name="volbtn_music_controls_title">Volume rocker music controls</string>
    <string name="volbtn_music_controls_summary">When screen off, long-pressing the volume rockers will seek music tracks</string>
    <string name="display_category_wakeup_options_title">Wakeup options</string>
    <string name="pref_volume_wake_title">Volume rocker wake</string>
    <string name="pref_volume_wake_summary">Pressing the volume rocker up/down will wake the device</string>
    <string name="power_menu_title">Power menu</string>
    <string name="power_menu_reboot_title">Reboot menu</string>
    <string name="power_menu_screenshot_title">Screenshot</string>
    <string name="power_menu_expanded_desktop">Expanded desktop</string>
    <string name="power_menu_profiles_title">Profile switcher</string>
    <string name="power_menu_airplane_title">Airplane mode</string>
    <string name="power_menu_silent_title">Sound panel</string>
</resources>