<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/themes_settings_title"
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:settings="http://schemas.android.com/apk/res/com.android.settings">
    <PreferenceScreen android:title="@string/screen_security_category" android:key="screen_security" android:summary="@string/screen_security_summary" android:fragment="com.android.settings.SecuritySettings">
        <extra android:name="cm_security" android:value="true" />
    </PreferenceScreen>
    <ListPreference android:persistent="false" android:entries="@array/lockscreen_background_entries" android:title="@string/lockscreen_custom_background_title" android:key="lockscreen_background" android:dialogTitle="@string/lockscreen_custom_background_title" android:entryValues="@array/lockscreen_background_values" />
    <ListPreference android:persistent="false" android:entries="@array/lockscreen_clock_align_entries" android:title="@string/lockscreen_clock_align_title" android:key="lockscreen_clock_align" android:dialogTitle="@string/lockscreen_clock_align_title" android:entryValues="@array/lockscreen_clock_align_values" />
    <ListPreference android:persistent="false" android:entries="@array/lockscreen_battery_status_entries" android:title="@string/lockscreen_battery_status_title" android:key="lockscreen_battery_status" android:dialogTitle="@string/lockscreen_battery_status_title" android:entryValues="@array/lockscreen_battery_status_values" />
    <PreferenceScreen android:title="@string/owner_info_settings_title" android:key="owner_info_settings" android:summary="@string/owner_info_settings_summary" android:fragment="com.android.settings.OwnerInfoSettings" />
    <Preference android:title="@string/lockscreen_weather_title" android:key="lockscreen_weather" android:summary="@string/lockscreen_weather_summary" android:fragment="com.android.settings.cyanogenmod.Weather" />
    <Preference android:title="@string/lockscreen_calendar_title" android:key="lockscreen_calendar" android:summary="@string/lockscreen_calendar_summary" android:fragment="com.android.settings.cyanogenmod.Calendar" />
    <Preference android:title="@string/lockscreen_target_title" android:key="lockscreen_targets" android:summary="@string/lockscreen_target_summary" android:fragment="com.android.settings.cyanogenmod.LockscreenTargets" />
    <PreferenceScreen android:title="@string/lockscreen_buttons_title" android:key="lockscreen_buttons" android:summary="@string/lockscreen_buttons_summary" android:fragment="com.android.settings.cyanogenmod.LockscreenButtons" />
</PreferenceScreen>