<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:title="@string/combined_status_bar_title"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/status_bar_clock_title">
        <CheckBoxPreference android:title="@string/status_bar_show_clock_title" android:key="status_bar_show_clock" android:defaultValue="true" />
        <ListPreference android:entries="@array/entries_status_bar_am_pm" android:title="@string/status_bar_am_pm_title" android:key="status_bar_am_pm" android:dialogTitle="@string/status_bar_am_pm_title" android:entryValues="@array/values_status_bar_am_pm" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/status_bar_general_title" android:key="status_bar_general">
        <CheckBoxPreference android:title="@string/combined_bar_auto_hide_title" android:key="combined_bar_auto_hide" android:summary="@string/combined_bar_auto_hide_summary" android:defaultValue="true" />
        <ListPreference android:entries="@array/entries_status_bar_battery" android:title="@string/status_bar_battery_title" android:key="status_bar_battery" android:dialogTitle="@string/status_bar_battery_title" android:entryValues="@array/values_status_bar_battery" />
        <ListPreference android:entries="@array/entries_status_bar_signal" android:title="@string/status_bar_signal_text_title" android:key="status_bar_signal" android:dialogTitle="@string/status_bar_signal_text_title" android:entryValues="@array/values_status_bar_signal" />
        <CheckBoxPreference android:title="@string/status_bar_toggle_brightness" android:key="status_bar_brightness_control" android:summary="@string/status_bar_toggle_brightness_summary" android:defaultValue="false" />
        <CheckBoxPreference android:title="@string/status_bar_notif_count_title" android:key="status_bar_notif_count" android:summary="@string/status_bar_notif_count_summary" android:defaultValue="false" />
    </PreferenceCategory>
</PreferenceScreen>